Consume plans from API

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "embla-carousel-react": "^8.0.0-rc22",
     "lucide-react": "^0.321.0",
     "next": "14.0.4",
+    "pretty-bytes": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
