--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pretty-bytes": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "0.32.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
